--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
   <title>AZ-900 Exam Simulator</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    footer {
+      width: 100%;
+      text-align: center;
+      margin-top: 3em;
+      padding: 1em 0 1.2em 0;
+      background: none;
+    }
+    .contact-footer small {
+      color: #888;
+      font-size: 0.96em;
+    }
+    .contact-footer a {
+      color: #2563eb;
+      text-decoration: underline dotted;
+    }
+    body.dark .contact-footer small {
+      color: #b8b8b8;
+    }
+    body.dark .contact-footer a {
+      color: #3b82f6;
+    }
     :root {
       --primary: #2563eb;
       --azure: #0078d4;
@@ -933,5 +954,13 @@
     // On load, update time display
     updateExamTime();
   </script>
+  <footer>
+  <div class="contact-footer">
+    <small>
+      For further information, contact:
+      <a href="mailto:contact@example.com">goosebumpsq@protonmail.com</a>
+    </small>
+  </div>
+</footer>
 </body>
 </html>
