--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
   <div class="contact-footer">
     <small>
       For further information, contact:
-      <a href="mailto:goosebumpsq@protonmail.com">goosebumpsq@protonmail.com</a>
+      <a href="mailto:goosebumpsq@protonmail.me">goosebumpsq@protonmail.me</a>
     </small>
   </div>
 </footer>
