--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
     <div class="contact-footer">
       <small>
         For further information, contact:
-        <a href="mailto:contact@example.com">contact@example.com</a>
+        <a href="mailto:goosebumpsq@proton.me">goosebumpsq@proton.me</a>
       </small>
     </div>
   </footer>
