--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
     }
     .sm-logo-img {
       display: block;
-      width: 110px;
-      height: 110px;
-      max-width: 38vw;
-      max-height: 38vw;
+      width: 200px;
+      height: 200px;
+      max-width: 41vw;
+      max-height: 41vw;
       margin: 0 auto 0.5rem auto;
       object-fit: contain;
       border-radius: 50%;
@@ -583,7 +583,7 @@
     <div class="contact-footer">
       <small>
         For further information, contact:
-        <a href="mailto:contact@example.com">contact@example.com</a>
+        <a href="mailto:goosebumpsq@proton.me">goosebumpsq@proton.me</a>
       </small>
     </div>
   </footer>
