--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
         score: "Votre score :",
         timeTaken: "Temps écoulé :",
         restart: "Recommencer",
-        love: "❤️ بحبك كثير ياروhi ❤️",
+        love: "❤️ بحبك كثير ياروحي ❤️",
         explanation: "Explication :",
         correct: "Correct !",
         incorrect: "Incorrect !",
