--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
         explanation: "التفسير:",
         correct: "إجابة صحيحة!",
         incorrect: "إجابة خاطئة!",
-        loveQ: "هل تحبني؟",
+        loveQ: "تحبني؟",
         loveOpts: ["نعم", "لا", "لست متأكدًا"],
         loveLabel: "إجابتك عن « هل تحبني؟ » كانت: "
       }
