--- a/index.html
+++ b/index.html
@@ -955,7 +955,11 @@
         {
           q: "Azure Backup sert à :",
           opts: ["Sauvegarder des ressources et restaurer en cas de pertes","Déployer des VM","Optimiser la facturation","Gérer des réseaux"],
-         
+          answer: 0,
+          reason: "D’automatiser la gestion et les tâches sur ressources Azure Explication : Permet d’automatiser tâches répétitives et gérer efficacement la plateforme."
+           },
+          }
+], // <-- END OF FRENCH ARRAY
       ar: [
         {
           q: "أي من خدمات Azure تُستخدم أساسًا لاستضافة الأجهزة الافتراضية؟",
